# Drunken_Bishop

./: .gitignore  README.md  drunken_bishop.py  pyproject.toml
docs/: algorithm.md
drunken_bishop/: core.py
tests/: test_drunken_bishop.py
